<resources>
    <string name="app_name">Final Project</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_countdown">CountdownActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="done">done!</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="how_long_would_you_like_to_study_for">How long would you like to study for?</string>
    <string name="start">Start</string>
    <string name="i_dont_do_anything">I don\'t do anything</string>
    <string name="opens_spotify">Opens Spotify</string>
    <string name="closes_the_app">Closes the app</string>
    <string name="opens_the_settings_page">Opens the settings page</string>
    <string name="DNDMessage">In order to properly mute the audio the app needs to have notification access in the settings\n\nIf you would like to have specific users allowed through Do Not Disturb then you must star them in your contacts and change your Do Not Disturb settings to allow priority contacts.\n\nSettings > Sound > Do Not Disturb preferences >\nPriority only allows > Calls</string>
    <string name="cancel">Cancel</string>
    <string name="studybuddy">Study Buddy</string>
    <string name="settings">Settings</string>
    <string name="open_book_icon">Open book Icon</string>
</resources>
