<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context="justin.travis.devin.finalproject.FirstRun"
    tools:ignore="Overdraw">

    <Button
        android:id="@+id/button_Settings"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/settings"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/studybuddy"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView_FirstRunMessage"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/DNDMessage"
        android:textAppearance="@android:style/TextAppearance.Material.Menu"
        tools:targetApi="lollipop" />

    <!--<Button-->
    <!--android:id="@+id/button_done"-->
    <!--style="@android:style/Widget.Material.Light.Button.Borderless"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_alignParentEnd="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_marginBottom="28dp"-->
    <!--android:layout_marginEnd="24dp"-->
    <!--android:layout_marginRight="24dp"-->
    <!--android:text="" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/book_icon_temp"
        android:contentDescription="@string/open_book_icon"/>
</android.widget.RelativeLayout>
