<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chalkboard_background_2"
    tools:context="justin.travis.devin.finalproject.MainActivity">

    <!--<Spinner-->
        <!--android:id="@+id/spinner_hours"-->
        <!--android:layout_width="90dp"-->
        <!--android:layout_height="24dp"-->
        <!--android:layout_above="@+id/button_start"-->
        <!--android:layout_alignLeft="@+id/textView_hours"-->
        <!--android:layout_alignStart="@+id/textView_hours"-->
        <!--android:layout_marginBottom="28dp"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:dropDownWidth="50dp" />-->

    <!--<Spinner-->
        <!--android:id="@+id/spinner_minutes"-->
        <!--android:layout_width="90dp"-->
        <!--android:layout_height="24dp"-->
        <!--android:layout_alignLeft="@+id/textView_minutes"-->
        <!--android:layout_alignStart="@+id/textView_minutes"-->
        <!--android:layout_alignTop="@+id/spinner_hours"-->
        <!--android:background="@android:color/transparent"-->
        <!--android:dropDownWidth="50dp" />-->

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/fff_tusj_family"
        android:text="@string/how_long_would_you_like_to_study_for"
        android:textColor="@color/colorChalk" />

    <TextView
        android:id="@+id/textView_hours"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/picker_Hours"
        android:layout_alignStart="@+id/picker_Hours"
        android:layout_below="@+id/textView_title"
        android:layout_marginTop="22dp"
        android:fontFamily="@font/fff_tusj_family"
        android:gravity="center"
        android:text="@string/hours"
        android:textColor="@color/colorChalk" />

    <TextView
        android:id="@+id/textView_minutes"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_hours"
        android:layout_alignBottom="@+id/textView_hours"
        android:layout_alignLeft="@+id/picker_Minutes"
        android:layout_alignStart="@+id/picker_Minutes"
        android:fontFamily="@font/fff_tusj_family"
        android:gravity="center"
        android:text="@string/minutes"
        android:textColor="@color/colorChalk" />

    <NumberPicker
        android:id="@+id/picker_Hours"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/picker_Minutes"
        android:layout_toLeftOf="@+id/button_start"
        android:layout_toStartOf="@+id/button_start"
        android:theme="@style/AppTheme.Picker"/>

    <NumberPicker
        android:id="@+id/picker_Minutes"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_minutes"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/button_start"
        android:layout_toRightOf="@+id/button_start"
        android:theme="@style/AppTheme.Picker"/>

    <Button
        android:id="@+id/button_start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picker_Minutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/fff_tusj_family"
        android:text="@string/start"
        android:textColor="@color/colorChalk" />

    <ImageButton
        android:id="@+id/settings_image_button"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/spotify_image_button"
        android:layout_toLeftOf="@+id/picker_Hours"
        android:layout_toStartOf="@+id/picker_Hours"
        android:background="@drawable/chalk_settings"
        android:contentDescription="@string/opens_the_settings_page"
        android:scaleType="fitXY" />

    <ImageButton
        android:id="@+id/spotify_image_button"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/power_image_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/chalk_spotify"
        android:contentDescription="@string/opens_spotify"
        android:scaleType="fitXY" />

    <ImageButton
        android:id="@+id/power_image_button"
        android:layout_width="42dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="48dp"
        android:layout_toEndOf="@+id/textView_minutes"
        android:layout_toRightOf="@+id/textView_minutes"
        android:background="@drawable/chalk_power_button"
        android:contentDescription="@string/closes_the_app"
        android:scaleType="fitXY" />

    <!--<TextView-->
    <!--android:id="@+id/textView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignEnd="@+id/power_image_button"-->
    <!--android:layout_alignLeft="@+id/settings_image_button"-->
    <!--android:layout_alignRight="@+id/power_image_button"-->
    <!--android:layout_alignStart="@+id/settings_image_button"-->
    <!--android:layout_below="@+id/button_start"-->
    <!--android:layout_marginTop="30dp"-->
    <!--android:gravity="center"-->
    <!--android:text="@string/in_order_to_properly_mute_the_audio_the_app_needs_to_have_notification_access_in_the_settings_nsettings_apps_amp_notifications_nspecial_app_access_do_not_disturb"/>-->
    <!--android:textColor="@color/colorChalk" />-->

</android.widget.RelativeLayout>